# practice-cloudflare-workers-rust

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json  wrangler.toml
src/: front.rs  server.rs
templates/: index.html
