[package]
name = "practice-cloudfront-workers-rust"
version = "0.1.0"
edition = "2021"
authors = [ "Shogoro Yoshida <shogoro.yoshida@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
path = "src/server.rs"
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
askama = "0.12.1"
dioxus = { version = "0.6.3", features = ["web"] }
